# dropCast

./: AndroidManifest.xml  BuildAPK.sh  BuildClientAPK.sh  CMakeLists.txt  DropCastClient.apk  DropCastHost.apk  HolyOriface.lua  README.md  debug.keystore  fileTree  flake.nix  jump.lua  snake.lua
APK_Make/: AndroidBuild  AndroidBuildConfig  AndroidManifest.xml  CMakeLists.txt
Client/: CMakeLists.txt
Client/src/: main.cpp
Client_APK/: AndroidManifest.xml  CMakeLists.txt
Host/: CMakeLists.txt
Host/src/: main.cpp
build_android/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  app-aligned.apk.idsig  app-unaligned.apk  build.ninja  cmake_install.cmake
build_client_android/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  app-aligned.apk.idsig  app-unaligned.apk  build.ninja  cmake_install.cmake
